[gd_scene load_steps=4 format=3 uid="uid://d2luc4dxvh7j8"]

[ext_resource type="Script" uid="uid://ltwu3y1acd0a" path="res://autoloads/dialogue_balloon/dialogue_balloon.gd" id="1_x5jme"]
[ext_resource type="PackedScene" uid="uid://eqrv7avptp3b" path="res://scenes/auxie/auxie.tscn" id="2_eso2r"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="2_yi135"]

[node name="DialogueBalloon" type="CanvasLayer"]
script = ExtResource("1_x5jme")

[node name="CharacterAnchor" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 226.0
offset_top = -225.0
offset_right = 226.0
offset_bottom = -225.0
grow_vertical = 0

[node name="CharacterDock" type="CanvasGroup" parent="CharacterAnchor"]
position = Vector2(0, 225)

[node name="Auxie" parent="CharacterAnchor/CharacterDock" instance=ExtResource("2_eso2r")]
scale = Vector2(0.5, 0.5)

[node name="CharacterDockBottom" type="Marker2D" parent="CharacterAnchor"]
position = Vector2(0, 225)

[node name="Balloon" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -295.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Balloon/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 2

[node name="Control" type="Control" parent="Balloon/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="CharacterLabelPanel" type="PanelContainer" parent="Balloon/MarginContainer/VBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
offset_left = 24.0
offset_top = -4.0
offset_right = 312.0
offset_bottom = 64.0
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Balloon/MarginContainer/VBoxContainer/Control/CharacterLabelPanel"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="CharacterLabel" type="Label" parent="Balloon/MarginContainer/VBoxContainer/Control/CharacterLabelPanel/MarginContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
mouse_filter = 1
text = "Character"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="PanelContainer" type="PanelContainer" parent="Balloon/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Balloon/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="DialogueLabel" parent="Balloon/MarginContainer/VBoxContainer/PanelContainer/MarginContainer" instance=ExtResource("2_yi135")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Dialogue..."

[node name="OutburstAnchor" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 85.0
offset_top = -717.0
offset_right = 85.0
offset_bottom = -717.0
grow_vertical = 0

[node name="OutburstLabel" type="Label" parent="OutburstAnchor"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 294.0
offset_bottom = 70.0
size_flags_horizontal = 0
size_flags_vertical = 8
theme_type_variation = &"CharacterOutburst"
text = "You suck lil bro"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
